# APx_fractal_task_collection

./: .copier-answers.yml  .gitignore  LICENSE  README.md  TransformParameters.0.txt  mkdocs.yml  pyproject.toml
.github/workflows/: build_and_test.yml
docs/: about.md  example_pipelines.md  gen_ref_pages.py  index.md  installation.md  running_tasks.md
docs/reference/: features.md  features_summary.md  init_utils.md  io_models.md  tasks.md  tasks_summary.md  utils.md
docs/reference/features/: morphology.md  population.md  texture.md
docs/reference/tasks/: aggregate_feature_tables.md  apply_basicpy_illumination_models.md  ashlar_stitching_and_registration.md  ashlar_stitching_and_registration_alt.md  calculate_basicpy_illumination_models.md  calculate_pixel_intensity_correlation.md  clip_label_image.md  convert_IC6000_to_ome_zarr.md  correct_4i_bleaching_artifacts.md  correct_chromatic_shift.md  detect_blob_centroids.md  filter_label_by_size.md  init_add_multiplexing_cycle_IC6000.md  init_aggregate_feature_tables.md  init_ashlar_stitching_and_registration.md  init_calculate_basicpy_illumination_models.md  init_clip_label_image.md  init_convert_IC6000_to_ome_zarr.md  init_convert_channel_to_label.md  init_correct_4i_bleaching_artifacts.md  init_expand_labels.md  init_normalize_feature_table.md  label_assignment_by_overlap.md  mask_label_image.md  merge_plate_metadata.md  multiplexed_pixel_clustering.md  normalize_feature_table.md  stitch_fovs_with_overlap.md
docs/stylesheets/: extra.css
examples/: apx_fractal_task_collection_example_00.json
features/: intensity.md
src/apx_fractal_task_collection/: IC6000_to_ome_zarr.py  __FRACTAL_MANIFEST__.json  __init__.py  aggregate_tables_to_well_level.py  apply_basicpy_illumination_model.py  apply_mask.py  args.json  ashlar_stitching_and_registration.py  ashlar_stitching_and_registration_pure.py  calculate_illumination_profiles.py  calculate_registration_image_based_chi_squared_shift.py  chromatic_shift_correction.py  clip_label_image.py  compress_zarr_for_visualization.py  convert_channel_to_label.py  create_ome_zarr_multiplex_IC6000.py  detect_blob_centroids.py  filter_label_by_size.py  init_utils.py  io_models.py  label_assignment_by_overlap.py  measure_features.py  measure_features_well.py  meta.json  multiplexed_pixel_clustering.py  segment_secondary_objects.py  stitch_fovs_with_overlap.py  utils.py
src/apx_fractal_task_collection/dev/: task_list.py  update_manifest.py
src/apx_fractal_task_collection/dev/task_info/: measure_features.md  pixel_intensity_correlation.md  segment_secondary.md
src/apx_fractal_task_collection/features/: intensity.py  morphology.py  population.py  texture.py
src/apx_fractal_task_collection/tasks/: aggregate_feature_tables.py  aggregate_tables_to_well_level.py  apply_basicpy_illumination_model.py  apply_basicpy_illumination_models.py  args.json  ashlar_stitching_and_registration.py  ashlar_stitching_and_registration_alt.py  ashlar_stitching_and_registration_pure.py  calculate_basicpy_illumination_models.py  calculate_illumination_profiles.py  calculate_pixel_intensity_correlation.py  calculate_registration_image_based_chi_squared_shift.py  chromatic_shift_correction.py  clip_label_image.py  compress_zarr_for_visualization.py  convert_IC6000_to_ome_zarr.py  convert_channel_to_label.py  correct_4i_bleaching_artifacts.py  correct_chromatic_shift.py  create_ome_zarr_multiplex_IC6000.py  detect_blob_centroids.py  expand_labels_skimage.py  filter_label_by_size.py  init_add_multiplexing_cycle_IC6000.py  init_aggregate_feature_tables.py  init_ashlar_stitching_and_registration.py  init_calculate_basicpy_illumination_models.py  init_calculate_pixel_intensity_correlation.py  init_clip_label_image.py  init_compress_zarr_for_visualization.py  init_convert_IC6000_to_ome_zarr.py  init_convert_channel_to_label.py  init_correct_4i_bleaching_artifacts.py  init_correct_chromatic_shift.py  init_detect_blob_centroids.py  init_expand_labels.py  init_filter_label_by_size.py  init_label_assignment_by_overlap.py  init_mask_label_image.py  init_normalize_feature_table.py  (+12 more)
src/custom_fractal_task_collection/: __FRACTAL_MANIFEST__.json  calculate_illumination_profiles.py  calculate_registration_image_based_chi_squared_shift.py  clip_label_image.py  label_assignment_by_overlap.py  measure_features.py  measure_features_well.py  segment_secondary_objects.py  thresholding_task.py
src/custom_fractal_task_collection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/custom_fractal_task_collection/dev/: update_manifest.py
tasks/: calculate_registration_image_based_chi_squared_shift.md  compress_zarr_for_visualization.md  convert_channel_to_label.md  create_ome_zarr_multiplex_IC6000.md  expand_labels_skimage.md  init_calculate_pixel_intensity_correlation.md  init_compress_zarr_for_visualization.md  init_correct_chromatic_shift.md  init_detect_blob_centroids.md  init_filter_label_by_size.md  init_label_assignment_by_overlap.md  init_mask_label_image.md  init_segment_secondary_objects.md  measure_features.md  segment_secondary_objects.md
tests/: __init__.py  generate_data.py  test_tasks.py  test_thresholding_task.py  test_valid_args_schemas.py  test_valid_manifest.py  test_valid_task_interface.py
tests/data/: metadata.csv
tests/data/IC6000_data/cycle_0/: test_data.xdce
tests/data/hcs_ngff_2D.zarr/: .zattrs
tests/data/hcs_ngff_2D.zarr/A/02/1/: .zattrs
tests/data/hcs_ngff_2D.zarr/A/2/2/: .zattrs
tests/data/hcs_ngff_2D.zarr/B/03/: .zattrs
tests/data/hcs_ngff_2D.zarr/B/03/0/: .zattrs
tests/data/hcs_ngff_2D.zarr/B/03/1/: .zattrs
tests/data/hcs_ngff_2D.zarr/B/3/: .zattrs
tests/data/hcs_ngff_2D.zarr/B/3/0/: .zattrs
tests/data/hcs_ngff_3D.zarr/: .zattrs
tests/data/hcs_ngff_3D.zarr/A/02/0/: .zattrs
tests/data/hcs_ngff_3D.zarr/A/02/1/: .zattrs
tests/data/hcs_ngff_3D.zarr/A/2/2/: .zattrs
tests/data/hcs_ngff_3D.zarr/B/03/1/: .zgroup
tests/data/ngff_example/my_image/: .zattrs
tests/data/ngff_example/my_image/0/: .zarray
tests/data/ngff_example/my_image/1/: .zarray
(+385 files in other folders)
